--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <body>
         <header></header>
         <main>
-            <div>test</div>
+            <div id='test'>test</div>
         </main>
         <footer>
 
