--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
     <head lang='en'>
         <meta charset='utf-8'>
         <title>Elise Website</title>
-        <link rel='stylesheet' href='website.css'>
+        <link rel='stylesheet' type='text/css' href='website.css'>
         <script src='website.js'></script>
     </head>
     <body>
         <header></header>
         <main>
-            <div id='test'>test</div>
+            <div>test</div>
         </main>
         <footer>
 
