--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head lang='en'>
         <meta charset='utf-8'>
         <title>Elise Website</title>
-        <link rel='stylesheet' type='text/css' href='website.css'>
+        <link rel='stylesheet' type='text/css' href='style.css'>
         <script src='website.js'></script>
     </head>
     <body>
