--- a/index.html
+++ b/index.html
@@ -9,7 +9,20 @@
     <body>
         <header></header>
         <main>
-            <div>test</div>
+            <article>
+                <section id='guess_one' class='guess'>
+                    <div class='tile'></div>
+                    <div class='tile'></div>
+                    <div class='tile'></div>
+                    <div class='tile'></div>
+                    <div class='tile'></div>
+                </section>
+                <section id='guess_two' class='guess'></section>
+                <section id='guess_three' class='guess'></section>
+                <section id='guess_four' class='guess'></section>
+                <section id='guess_five' class='guess'></section>
+                <section id='guess_six' class='guess'></section>
+            </article>
         </main>
         <footer>
 
