--- a/index.html
+++ b/index.html
@@ -10,18 +10,22 @@
         <header></header>
         <main>
             <article>
-                <section id='guess_one' class='guess'>
-                    <div class='tile'></div>
-                    <div class='tile'></div>
-                    <div class='tile'></div>
-                    <div class='tile'></div>
-                    <div class='tile'></div>
+                <input id='user-input'>
+                <button id='submit'>Submit</button>
+            </article>
+            <article>
+                <section id='guess-one' class='guess'>
+                    <div class='tile letter-one'></div>
+                    <div class='tile letter-two'></div>
+                    <div class='tile letter-three'></div>
+                    <div class='tile letter-four'></div>
+                    <div class='tile letter-five'></div>
                 </section>
-                <section id='guess_two' class='guess'></section>
-                <section id='guess_three' class='guess'></section>
-                <section id='guess_four' class='guess'></section>
-                <section id='guess_five' class='guess'></section>
-                <section id='guess_six' class='guess'></section>
+                <section id='guess-two' class='guess'></section>
+                <section id='guess-three' class='guess'></section>
+                <section id='guess-four' class='guess'></section>
+                <section id='guess-five' class='guess'></section>
+                <section id='guess-six' class='guess'></section>
             </article>
         </main>
         <footer>
