--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
         <meta charset='utf-8'>
         <title>Elise Website</title>
         <link rel='stylesheet' type='text/css' href='style.css'>
-        <script src='website.js'></script>
+        <script src='wordle.js'></script>
     </head>
     <body>
         <header></header>
         <main>
             <article>
-                <input id='user-input'>
+                <input id='user-input' type='text'>
                 <button id='submit'>Submit</button>
             </article>
             <article>
