--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html>
+<html xml:lang>
     <head lang='en'>
         <meta charset='utf-8'>
         <title>Elise Website</title>
         <link rel='stylesheet' type='text/css' href='style.css'>
-        <script src='wordle.js'></script>
+        <script type='text/javascript' src='script.js' async></script>
     </head>
     <body>
         <header></header>
@@ -12,7 +12,8 @@
             <article>
                 <input id='user-input' type='text'>
                 <button id='submit'>Submit</button>
-            </article>
+                <input type="button" value="X" id="turn" onclick='test()'>
+            </article>  
             <article>
                 <section id='guess-one' class='guess'>
                     <div class='tile letter-one'></div>
