--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset='utf-8'>
         <title>Elise Website</title>
         <link rel='stylesheet' type='text/css' href='style.css'>
-        <script type='text/javascript' src='script.js' async></script>
+        <script type='text/javascript' src='script.js'></script>
     </head>
     <body>
         <header></header>
@@ -12,22 +12,301 @@
             <article>
                 <input id='user-input' type='text'>
                 <button id='submit'>Submit</button>
-                <input type="button" value="X" id="turn" onclick='test()'>
             </article>  
             <article>
-                <section id='guess-one' class='guess'>
-                    <div class='tile letter-one'></div>
-                    <div class='tile letter-two'></div>
-                    <div class='tile letter-three'></div>
-                    <div class='tile letter-four'></div>
-                    <div class='tile letter-five'></div>
+                <!-- guess 1 -->
+                <section id='guess-1' class='guess'>
+                    <section class='guess-group'>
+                        <div class='tile letter-1'></div>
+                        <select class='dropdown'>
+                            <option value=''>none selected</option>
+                            <option value='#67a561'>green</option>
+                            <option value='#c3ae55'>yellow</option>
+                            <option value='#74787a'>gray</option>
+                        </select>
+                    </section>
+                    <section class='guess-group'>
+                        <div class='tile letter-2'></div>
+                        <select class='dropdown'>
+                            <option value=''>none selected</option>
+                            <option value='#67a561'>green</option>
+                            <option value='#c3ae55'>yellow</option>
+                            <option value='#74787a'>gray</option>
+                        </select>
+                    </section>
+                    <section class='guess-group'>
+                        <div class='tile letter-3'></div>
+                        <select class='dropdown'>
+                            <option value=''>none selected</option>
+                            <option value='#67a561'>green</option>
+                            <option value='#c3ae55'>yellow</option>
+                            <option value='#74787a'>gray</option>
+                        </select>
+                    </section>
+                    <section class='guess-group'>
+                        <div class='tile letter-4'></div>
+                        <select class='dropdown'>
+                            <option value=''>none selected</option>
+                            <option value='#67a561'>green</option>
+                            <option value='#c3ae55'>yellow</option>
+                            <option value='#74787a'>gray</option>
+                        </select>
+                    </section>
+                    <section class='guess-group'>
+                        <div class='tile letter-5'></div>
+                        <select class='dropdown'>
+                            <option value=''>none selected</option>
+                            <option value='#67a561'>green</option>
+                            <option value='#c3ae55'>yellow</option>
+                            <option value='#74787a'>gray</option>
+                        </select>
+                    </section>
                 </section>
-                <section id='guess-two' class='guess'></section>
-                <section id='guess-three' class='guess'></section>
-                <section id='guess-four' class='guess'></section>
-                <section id='guess-five' class='guess'></section>
-                <section id='guess-six' class='guess'></section>
+                <!-- guess 2 -->
+                <section id='guess-2' class='guess' style='display: none;'>
+                    <section class='guess-group'>
+                        <div class='tile letter-1'></div>
+                        <select class='dropdown'>
+                            <option value=''>none selected</option>
+                            <option value='#67a561'>green</option>
+                            <option value='#c3ae55'>yellow</option>
+                            <option value='#74787a'>gray</option>
+                        </select>
+                    </section>
+                    <section class='guess-group'>
+                        <div class='tile letter-2'></div>
+                        <select class='dropdown'>
+                            <option value=''>none selected</option>
+                            <option value='#67a561'>green</option>
+                            <option value='#c3ae55'>yellow</option>
+                            <option value='#74787a'>gray</option>
+                        </select>
+                    </section>
+                    <section class='guess-group'>
+                        <div class='tile letter-3'></div>
+                        <select class='dropdown'>
+                            <option value=''>none selected</option>
+                            <option value='#67a561'>green</option>
+                            <option value='#c3ae55'>yellow</option>
+                            <option value='#74787a'>gray</option>
+                        </select>
+                    </section>
+                    <section class='guess-group'>
+                        <div class='tile letter-4'></div>
+                        <select class='dropdown'>
+                            <option value=''>none selected</option>
+                            <option value='#67a561'>green</option>
+                            <option value='#c3ae55'>yellow</option>
+                            <option value='#74787a'>gray</option>
+                        </select>
+                    </section>
+                    <section class='guess-group'>
+                        <div class='tile letter-5'></div>
+                        <select class='dropdown'>
+                            <option value=''>none selected</option>
+                            <option value='#67a561'>green</option>
+                            <option value='#c3ae55'>yellow</option>
+                            <option value='#74787a'>gray</option>
+                        </select>
+                    </section>
+                </section>
+                <!-- guess 3 -->
+                <section id='guess-3' class='guess' style='display: none;'>
+                    <section class='guess-group'>
+                        <div class='tile letter-1'></div>
+                        <select class='dropdown'>
+                            <option value=''>none selected</option>
+                            <option value='#67a561'>green</option>
+                            <option value='#c3ae55'>yellow</option>
+                            <option value='#74787a'>gray</option>
+                        </select>
+                    </section>
+                    <section class='guess-group'>
+                        <div class='tile letter-2'></div>
+                        <select class='dropdown'>
+                            <option value=''>none selected</option>
+                            <option value='#67a561'>green</option>
+                            <option value='#c3ae55'>yellow</option>
+                            <option value='#74787a'>gray</option>
+                        </select>
+                    </section>
+                    <section class='guess-group'>
+                        <div class='tile letter-3'></div>
+                        <select class='dropdown'>
+                            <option value=''>none selected</option>
+                            <option value='#67a561'>green</option>
+                            <option value='#c3ae55'>yellow</option>
+                            <option value='#74787a'>gray</option>
+                        </select>
+                    </section>
+                    <section class='guess-group'>
+                        <div class='tile letter-4'></div>
+                        <select class='dropdown'>
+                            <option value=''>none selected</option>
+                            <option value='#67a561'>green</option>
+                            <option value='#c3ae55'>yellow</option>
+                            <option value='#74787a'>gray</option>
+                        </select>
+                    </section>
+                    <section class='guess-group'>
+                        <div class='tile letter-5'></div>
+                        <select class='dropdown'>
+                            <option value=''>none selected</option>
+                            <option value='#67a561'>green</option>
+                            <option value='#c3ae55'>yellow</option>
+                            <option value='#74787a'>gray</option>
+                        </select>
+                    </section>
+                </section>
+                <!-- guess 4 -->
+                <section id='guess-4' class='guess' style='display: none;'>
+                    <section class='guess-group'>
+                        <div class='tile letter-1'></div>
+                        <select class='dropdown'>
+                            <option value=''>none selected</option>
+                            <option value='#67a561'>green</option>
+                            <option value='#c3ae55'>yellow</option>
+                            <option value='#74787a'>gray</option>
+                        </select>
+                    </section>
+                    <section class='guess-group'>
+                        <div class='tile letter-2'></div>
+                        <select class='dropdown'>
+                            <option value=''>none selected</option>
+                            <option value='#67a561'>green</option>
+                            <option value='#c3ae55'>yellow</option>
+                            <option value='#74787a'>gray</option>
+                        </select>
+                    </section>
+                    <section class='guess-group'>
+                        <div class='tile letter-3'></div>
+                        <select class='dropdown'>
+                            <option value=''>none selected</option>
+                            <option value='#67a561'>green</option>
+                            <option value='#c3ae55'>yellow</option>
+                            <option value='#74787a'>gray</option>
+                        </select>
+                    </section>
+                    <section class='guess-group'>
+                        <div class='tile letter-4'></div>
+                        <select class='dropdown'>
+                            <option value=''>none selected</option>
+                            <option value='#67a561'>green</option>
+                            <option value='#c3ae55'>yellow</option>
+                            <option value='#74787a'>gray</option>
+                        </select>
+                    </section>
+                    <section class='guess-group'>
+                        <div class='tile letter-5'></div>
+                        <select class='dropdown'>
+                            <option value=''>none selected</option>
+                            <option value='#67a561'>green</option>
+                            <option value='#c3ae55'>yellow</option>
+                            <option value='#74787a'>gray</option>
+                        </select>
+                    </section>
+                </section>
+                <!-- guess 5 -->
+                <section id='guess-5' class='guess' style='display: none;'>
+                    <section class='guess-group'>
+                        <div class='tile letter-1'></div>
+                        <select class='dropdown'>
+                            <option value=''>none selected</option>
+                            <option value='#67a561'>green</option>
+                            <option value='#c3ae55'>yellow</option>
+                            <option value='#74787a'>gray</option>
+                        </select>
+                    </section>
+                    <section class='guess-group'>
+                        <div class='tile letter-2'></div>
+                        <select class='dropdown'>
+                            <option value=''>none selected</option>
+                            <option value='#67a561'>green</option>
+                            <option value='#c3ae55'>yellow</option>
+                            <option value='#74787a'>gray</option>
+                        </select>
+                    </section>
+                    <section class='guess-group'>
+                        <div class='tile letter-3'></div>
+                        <select class='dropdown'>
+                            <option value=''>none selected</option>
+                            <option value='#67a561'>green</option>
+                            <option value='#c3ae55'>yellow</option>
+                            <option value='#74787a'>gray</option>
+                        </select>
+                    </section>
+                    <section class='guess-group'>
+                        <div class='tile letter-4'></div>
+                        <select class='dropdown'>
+                            <option value=''>none selected</option>
+                            <option value='#67a561'>green</option>
+                            <option value='#c3ae55'>yellow</option>
+                            <option value='#74787a'>gray</option>
+                        </select>
+                    </section>
+                    <section class='guess-group'>
+                        <div class='tile letter-5'></div>
+                        <select class='dropdown'>
+                            <option value=''>none selected</option>
+                            <option value='#67a561'>green</option>
+                            <option value='#c3ae55'>yellow</option>
+                            <option value='#74787a'>gray</option>
+                        </select>
+                    </section>
+                </section>
+                <!-- guess 6 -->
+                <section id='guess-6' class='guess' style='display: none;'>
+                    <section class='guess-group'>
+                        <div class='tile letter-1'></div>
+                        <select class='dropdown'>
+                            <option value=''>none selected</option>
+                            <option value='#67a561'>green</option>
+                            <option value='#c3ae55'>yellow</option>
+                            <option value='#74787a'>gray</option>
+                        </select>
+                    </section>
+                    <section class='guess-group'>
+                        <div class='tile letter-2'></div>
+                        <select class='dropdown'>
+                            <option value=''>none selected</option>
+                            <option value='#67a561'>green</option>
+                            <option value='#c3ae55'>yellow</option>
+                            <option value='#74787a'>gray</option>
+                        </select>
+                    </section>
+                    <section class='guess-group'>
+                        <div class='tile letter-3'></div>
+                        <select class='dropdown'>
+                            <option value=''>none selected</option>
+                            <option value='#67a561'>green</option>
+                            <option value='#c3ae55'>yellow</option>
+                            <option value='#74787a'>gray</option>
+                        </select>
+                    </section>
+                    <section class='guess-group'>
+                        <div class='tile letter-4'></div>
+                        <select class='dropdown'>
+                            <option value=''>none selected</option>
+                            <option value='#67a561'>green</option>
+                            <option value='#c3ae55'>yellow</option>
+                            <option value='#74787a'>gray</option>
+                        </select>
+                    </section>
+                    <section class='guess-group'>
+                        <div class='tile letter-5'></div>
+                        <select class='dropdown'>
+                            <option value=''>none selected</option>
+                            <option value='#67a561'>green</option>
+                            <option value='#c3ae55'>yellow</option>
+                            <option value='#74787a'>gray</option>
+                        </select>
+                    </section>
+                </section>
             </article>
+            <article>
+                <div id='suggested-guess'></div>
+            </article>
+            <button id='next-guess' hidden>Submit Guess</button>
         </main>
         <footer>
 
