--- a/index.html
+++ b/index.html
@@ -12,299 +12,150 @@
             <article>
                 <input id='user-input' type='text'>
                 <button id='submit'>Submit</button>
-            </article>  
+            </article>
+            <article id='suggested-guess-container' style='display: none;'>
+                <h1>Next Suggested Guesses:</h1>
+                <div id='suggested-guess'>test</div>
+            </article>
             <article>
                 <!-- guess 1 -->
                 <section id='guess-1' class='guess'>
                     <section class='guess-group'>
-                        <div class='tile letter-1'></div>
-                        <select class='dropdown'>
+                        <div class='tile letter-1' style='background-color: #74787a;'></div>
+                        <!-- <select class='dropdown'>
                             <option value=''>none selected</option>
                             <option value='#67a561'>green</option>
                             <option value='#c3ae55'>yellow</option>
                             <option value='#74787a'>gray</option>
-                        </select>
+                        </select> -->
                     </section>
                     <section class='guess-group'>
-                        <div class='tile letter-2'></div>
-                        <select class='dropdown'>
+                        <div class='tile letter-2' style='background-color: #74787a;'></div>
+                        <!-- <select class='dropdown'>
                             <option value=''>none selected</option>
                             <option value='#67a561'>green</option>
                             <option value='#c3ae55'>yellow</option>
                             <option value='#74787a'>gray</option>
-                        </select>
+                        </select> -->
                     </section>
                     <section class='guess-group'>
-                        <div class='tile letter-3'></div>
-                        <select class='dropdown'>
+                        <div class='tile letter-3' style='background-color: #74787a;'></div>
+                        <!-- <select class='dropdown'>
                             <option value=''>none selected</option>
                             <option value='#67a561'>green</option>
                             <option value='#c3ae55'>yellow</option>
                             <option value='#74787a'>gray</option>
-                        </select>
+                        </select> -->
                     </section>
                     <section class='guess-group'>
-                        <div class='tile letter-4'></div>
-                        <select class='dropdown'>
+                        <div class='tile letter-4' style='background-color: #74787a;'></div>
+                        <!-- <select class='dropdown'>
                             <option value=''>none selected</option>
                             <option value='#67a561'>green</option>
                             <option value='#c3ae55'>yellow</option>
                             <option value='#74787a'>gray</option>
-                        </select>
+                        </select> -->
                     </section>
                     <section class='guess-group'>
-                        <div class='tile letter-5'></div>
-                        <select class='dropdown'>
+                        <div class='tile letter-5' style='background-color: #74787a;'></div>
+                        <!-- <select class='dropdown'>
                             <option value=''>none selected</option>
                             <option value='#67a561'>green</option>
                             <option value='#c3ae55'>yellow</option>
                             <option value='#74787a'>gray</option>
-                        </select>
+                        </select> -->
                     </section>
                 </section>
                 <!-- guess 2 -->
                 <section id='guess-2' class='guess' style='display: none;'>
                     <section class='guess-group'>
-                        <div class='tile letter-1'></div>
-                        <select class='dropdown'>
-                            <option value=''>none selected</option>
-                            <option value='#67a561'>green</option>
-                            <option value='#c3ae55'>yellow</option>
-                            <option value='#74787a'>gray</option>
-                        </select>
+                        <div class='tile letter-1' style='background-color: #74787a;'></div>
                     </section>
                     <section class='guess-group'>
-                        <div class='tile letter-2'></div>
-                        <select class='dropdown'>
-                            <option value=''>none selected</option>
-                            <option value='#67a561'>green</option>
-                            <option value='#c3ae55'>yellow</option>
-                            <option value='#74787a'>gray</option>
-                        </select>
+                        <div class='tile letter-2' style='background-color: #74787a;'></div>
                     </section>
                     <section class='guess-group'>
-                        <div class='tile letter-3'></div>
-                        <select class='dropdown'>
-                            <option value=''>none selected</option>
-                            <option value='#67a561'>green</option>
-                            <option value='#c3ae55'>yellow</option>
-                            <option value='#74787a'>gray</option>
-                        </select>
+                        <div class='tile letter-3' style='background-color: #74787a;'></div>
                     </section>
                     <section class='guess-group'>
-                        <div class='tile letter-4'></div>
-                        <select class='dropdown'>
-                            <option value=''>none selected</option>
-                            <option value='#67a561'>green</option>
-                            <option value='#c3ae55'>yellow</option>
-                            <option value='#74787a'>gray</option>
-                        </select>
+                        <div class='tile letter-4' style='background-color: #74787a;'></div>
                     </section>
                     <section class='guess-group'>
-                        <div class='tile letter-5'></div>
-                        <select class='dropdown'>
-                            <option value=''>none selected</option>
-                            <option value='#67a561'>green</option>
-                            <option value='#c3ae55'>yellow</option>
-                            <option value='#74787a'>gray</option>
-                        </select>
+                        <div class='tile letter-5' style='background-color: #74787a;'></div>
                     </section>
                 </section>
                 <!-- guess 3 -->
                 <section id='guess-3' class='guess' style='display: none;'>
                     <section class='guess-group'>
-                        <div class='tile letter-1'></div>
-                        <select class='dropdown'>
-                            <option value=''>none selected</option>
-                            <option value='#67a561'>green</option>
-                            <option value='#c3ae55'>yellow</option>
-                            <option value='#74787a'>gray</option>
-                        </select>
+                        <div class='tile letter-1' style='background-color: #74787a;'></div>
                     </section>
                     <section class='guess-group'>
-                        <div class='tile letter-2'></div>
-                        <select class='dropdown'>
-                            <option value=''>none selected</option>
-                            <option value='#67a561'>green</option>
-                            <option value='#c3ae55'>yellow</option>
-                            <option value='#74787a'>gray</option>
-                        </select>
+                        <div class='tile letter-2' style='background-color: #74787a;'></div>
                     </section>
                     <section class='guess-group'>
-                        <div class='tile letter-3'></div>
-                        <select class='dropdown'>
-                            <option value=''>none selected</option>
-                            <option value='#67a561'>green</option>
-                            <option value='#c3ae55'>yellow</option>
-                            <option value='#74787a'>gray</option>
-                        </select>
+                        <div class='tile letter-3' style='background-color: #74787a;'></div>
                     </section>
                     <section class='guess-group'>
-                        <div class='tile letter-4'></div>
-                        <select class='dropdown'>
-                            <option value=''>none selected</option>
-                            <option value='#67a561'>green</option>
-                            <option value='#c3ae55'>yellow</option>
-                            <option value='#74787a'>gray</option>
-                        </select>
+                        <div class='tile letter-4' style='background-color: #74787a;'></div>
                     </section>
                     <section class='guess-group'>
-                        <div class='tile letter-5'></div>
-                        <select class='dropdown'>
-                            <option value=''>none selected</option>
-                            <option value='#67a561'>green</option>
-                            <option value='#c3ae55'>yellow</option>
-                            <option value='#74787a'>gray</option>
-                        </select>
+                        <div class='tile letter-5' style='background-color: #74787a;'></div>
                     </section>
                 </section>
                 <!-- guess 4 -->
                 <section id='guess-4' class='guess' style='display: none;'>
                     <section class='guess-group'>
-                        <div class='tile letter-1'></div>
-                        <select class='dropdown'>
-                            <option value=''>none selected</option>
-                            <option value='#67a561'>green</option>
-                            <option value='#c3ae55'>yellow</option>
-                            <option value='#74787a'>gray</option>
-                        </select>
+                        <div class='tile letter-1' style='background-color: #74787a;'></div>
                     </section>
                     <section class='guess-group'>
-                        <div class='tile letter-2'></div>
-                        <select class='dropdown'>
-                            <option value=''>none selected</option>
-                            <option value='#67a561'>green</option>
-                            <option value='#c3ae55'>yellow</option>
-                            <option value='#74787a'>gray</option>
-                        </select>
+                        <div class='tile letter-2' style='background-color: #74787a;'></div>
                     </section>
                     <section class='guess-group'>
-                        <div class='tile letter-3'></div>
-                        <select class='dropdown'>
-                            <option value=''>none selected</option>
-                            <option value='#67a561'>green</option>
-                            <option value='#c3ae55'>yellow</option>
-                            <option value='#74787a'>gray</option>
-                        </select>
+                        <div class='tile letter-3' style='background-color: #74787a;'></div>
                     </section>
                     <section class='guess-group'>
-                        <div class='tile letter-4'></div>
-                        <select class='dropdown'>
-                            <option value=''>none selected</option>
-                            <option value='#67a561'>green</option>
-                            <option value='#c3ae55'>yellow</option>
-                            <option value='#74787a'>gray</option>
-                        </select>
+                        <div class='tile letter-4' style='background-color: #74787a;'></div>
                     </section>
                     <section class='guess-group'>
-                        <div class='tile letter-5'></div>
-                        <select class='dropdown'>
-                            <option value=''>none selected</option>
-                            <option value='#67a561'>green</option>
-                            <option value='#c3ae55'>yellow</option>
-                            <option value='#74787a'>gray</option>
-                        </select>
+                        <div class='tile letter-5' style='background-color: #74787a;'></div>
                     </section>
                 </section>
                 <!-- guess 5 -->
                 <section id='guess-5' class='guess' style='display: none;'>
                     <section class='guess-group'>
-                        <div class='tile letter-1'></div>
-                        <select class='dropdown'>
-                            <option value=''>none selected</option>
-                            <option value='#67a561'>green</option>
-                            <option value='#c3ae55'>yellow</option>
-                            <option value='#74787a'>gray</option>
-                        </select>
+                        <div class='tile letter-1' style='background-color: #74787a;'></div>
                     </section>
                     <section class='guess-group'>
-                        <div class='tile letter-2'></div>
-                        <select class='dropdown'>
-                            <option value=''>none selected</option>
-                            <option value='#67a561'>green</option>
-                            <option value='#c3ae55'>yellow</option>
-                            <option value='#74787a'>gray</option>
-                        </select>
+                        <div class='tile letter-2' style='background-color: #74787a;'></div>
                     </section>
                     <section class='guess-group'>
-                        <div class='tile letter-3'></div>
-                        <select class='dropdown'>
-                            <option value=''>none selected</option>
-                            <option value='#67a561'>green</option>
-                            <option value='#c3ae55'>yellow</option>
-                            <option value='#74787a'>gray</option>
-                        </select>
+                        <div class='tile letter-3' style='background-color: #74787a;'></div>
                     </section>
                     <section class='guess-group'>
-                        <div class='tile letter-4'></div>
-                        <select class='dropdown'>
-                            <option value=''>none selected</option>
-                            <option value='#67a561'>green</option>
-                            <option value='#c3ae55'>yellow</option>
-                            <option value='#74787a'>gray</option>
-                        </select>
+                        <div class='tile letter-4' style='background-color: #74787a;'></div>
                     </section>
                     <section class='guess-group'>
-                        <div class='tile letter-5'></div>
-                        <select class='dropdown'>
-                            <option value=''>none selected</option>
-                            <option value='#67a561'>green</option>
-                            <option value='#c3ae55'>yellow</option>
-                            <option value='#74787a'>gray</option>
-                        </select>
+                        <div class='tile letter-5' style='background-color: #74787a;'></div>
                     </section>
                 </section>
                 <!-- guess 6 -->
                 <section id='guess-6' class='guess' style='display: none;'>
                     <section class='guess-group'>
-                        <div class='tile letter-1'></div>
-                        <select class='dropdown'>
-                            <option value=''>none selected</option>
-                            <option value='#67a561'>green</option>
-                            <option value='#c3ae55'>yellow</option>
-                            <option value='#74787a'>gray</option>
-                        </select>
+                        <div class='tile letter-1' style='background-color: #74787a;'></div>
                     </section>
                     <section class='guess-group'>
-                        <div class='tile letter-2'></div>
-                        <select class='dropdown'>
-                            <option value=''>none selected</option>
-                            <option value='#67a561'>green</option>
-                            <option value='#c3ae55'>yellow</option>
-                            <option value='#74787a'>gray</option>
-                        </select>
+                        <div class='tile letter-2' style='background-color: #74787a;'></div>
                     </section>
                     <section class='guess-group'>
-                        <div class='tile letter-3'></div>
-                        <select class='dropdown'>
-                            <option value=''>none selected</option>
-                            <option value='#67a561'>green</option>
-                            <option value='#c3ae55'>yellow</option>
-                            <option value='#74787a'>gray</option>
-                        </select>
+                        <div class='tile letter-3' style='background-color: #74787a;'></div>
                     </section>
                     <section class='guess-group'>
-                        <div class='tile letter-4'></div>
-                        <select class='dropdown'>
-                            <option value=''>none selected</option>
-                            <option value='#67a561'>green</option>
-                            <option value='#c3ae55'>yellow</option>
-                            <option value='#74787a'>gray</option>
-                        </select>
+                        <div class='tile letter-4' style='background-color: #74787a;'></div>
                     </section>
                     <section class='guess-group'>
-                        <div class='tile letter-5'></div>
-                        <select class='dropdown'>
-                            <option value=''>none selected</option>
-                            <option value='#67a561'>green</option>
-                            <option value='#c3ae55'>yellow</option>
-                            <option value='#74787a'>gray</option>
-                        </select>
+                        <div class='tile letter-5' style='background-color: #74787a;'></div>
                     </section>
                 </section>
-            </article>
-            <article>
-                <div id='suggested-guess'></div>
             </article>
             <button id='next-guess' hidden>Submit Guess</button>
         </main>
