--- a/index.html
+++ b/index.html
@@ -15,55 +15,25 @@
             </article>
             <article id='suggested-guess-container' style='display: none;'>
                 <h1>Next Suggested Guesses:</h1>
-                <div id='suggested-guess'>test</div>
+                <div id='suggested-guess'></div>
             </article>
             <article>
                 <!-- guess 1 -->
                 <section id='guess-1' class='guess'>
                     <section class='guess-group'>
                         <div class='tile letter-1' style='background-color: #74787a;'></div>
-                        <!-- <select class='dropdown'>
-                            <option value=''>none selected</option>
-                            <option value='#67a561'>green</option>
-                            <option value='#c3ae55'>yellow</option>
-                            <option value='#74787a'>gray</option>
-                        </select> -->
                     </section>
                     <section class='guess-group'>
                         <div class='tile letter-2' style='background-color: #74787a;'></div>
-                        <!-- <select class='dropdown'>
-                            <option value=''>none selected</option>
-                            <option value='#67a561'>green</option>
-                            <option value='#c3ae55'>yellow</option>
-                            <option value='#74787a'>gray</option>
-                        </select> -->
                     </section>
                     <section class='guess-group'>
                         <div class='tile letter-3' style='background-color: #74787a;'></div>
-                        <!-- <select class='dropdown'>
-                            <option value=''>none selected</option>
-                            <option value='#67a561'>green</option>
-                            <option value='#c3ae55'>yellow</option>
-                            <option value='#74787a'>gray</option>
-                        </select> -->
                     </section>
                     <section class='guess-group'>
                         <div class='tile letter-4' style='background-color: #74787a;'></div>
-                        <!-- <select class='dropdown'>
-                            <option value=''>none selected</option>
-                            <option value='#67a561'>green</option>
-                            <option value='#c3ae55'>yellow</option>
-                            <option value='#74787a'>gray</option>
-                        </select> -->
                     </section>
                     <section class='guess-group'>
                         <div class='tile letter-5' style='background-color: #74787a;'></div>
-                        <!-- <select class='dropdown'>
-                            <option value=''>none selected</option>
-                            <option value='#67a561'>green</option>
-                            <option value='#c3ae55'>yellow</option>
-                            <option value='#74787a'>gray</option>
-                        </select> -->
                     </section>
                 </section>
                 <!-- guess 2 -->
