--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 <h1>Next Suggested Guesses:</h1>
                 <div id='suggested-guess'></div>
             </article>
-            <article>
+            <article class='guess'>
                 <!-- guess 1 -->
                 <section id='guess-1' class='guess'>
                     <section class='guess-group'>
