--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <body>
         <header></header>
         <main>
-            <article>
+            <article id='user-input-container'>
                 <input id='user-input' type='text'>
                 <button id='submit'>Submit</button>
             </article>
